force-app/main/default/objects/X0_RCDM_Dates__mdt/X0_RCDM_Dates__mdt.object-meta.xml
<CustomObject>
    <label>$0 RCDM Dates</label>
    <pluralLabel>$0 RCDM Dates</pluralLabel>
</CustomObject>