force-app/main/default/objects/X0_RCDM_Dates__mdt/fields/Approval_Category__c.field-meta.xml
<CustomField>
    <fullName>Approval_Category__c</fullName>
    <label>Approval Category</label>
    <length>50</length>
    <type>Text</type>
</CustomField>