force-app/main/default/objects/X0_RCDM_Dates__mdt/fields/EndDate_Day__c.field-meta.xml
<CustomField>
    <fullName>EndDate_Day__c</fullName>
    <label>EndDate-Day</label>
    <length>10</length>
    <required>true</required>
    <type>Text</type>
</CustomField>