force-app/main/default/objects/X0_RCDM_Dates__mdt/fields/EndDate_Month__c.field-meta.xml
<CustomField>
    <fullName>EndDate_Month__c</fullName>
    <label>EndDate-Month</label>
    <length>10</length>
    <required>true</required>
    <type>Text</type>
</CustomField>