force-app/main/default/objects/X0_RCDM_Dates__mdt/fields/Entitlement_Product_Name__c.field-meta.xml
<CustomField>
    <fullName>Entitlement_Product_Name__c</fullName>
    <label>Entitlement Product Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>