force-app/main/default/objects/X0_RCDM_Dates__mdt/fields/Entitlement_Type__c.field-meta.xml
<CustomField>
    <fullName>Entitlement_Type__c</fullName>
    <label>Entitlement Type</label>
    <length>50</length>
    <type>Text</type>
</CustomField>