force-app/main/default/objects/X0_RCDM_Dates__mdt/fields/IT_Product_Type__c.field-meta.xml
<CustomField>
    <fullName>IT_Product_Type__c</fullName>
    <label>IT Product Type</label>
    <length>50</length>
    <type>Text</type>
</CustomField>