force-app/main/default/objects/X0_RCDM_Dates__mdt/fields/Licensing_Type__c.field-meta.xml
<CustomField>
    <fullName>Licensing_Type__c</fullName>
    <label>Licensing Type</label>
    <length>50</length>
    <type>Text</type>
</CustomField>