force-app/main/default/objects/X0_RCDM_Dates__mdt/fields/List_Price__c.field-meta.xml
<CustomField>
    <fullName>List_Price__c</fullName>
    <label>List Price</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>