force-app/main/default/objects/X0_RCDM_Dates__mdt/fields/Product_Level__c.field-meta.xml
<CustomField>
    <fullName>Product_Level__c</fullName>
    <label>Product Level</label>
    <length>50</length>
    <type>Text</type>
</CustomField>