force-app/main/default/objects/X0_RCDM_Dates__mdt/fields/Product_Name__c.field-meta.xml
<CustomField>
    <fullName>Product_Name__c</fullName>
    <label>Product Name</label>
    <length>25</length>
    <type>Text</type>
</CustomField>