force-app/main/default/objects/X0_RCDM_Dates__mdt/fields/Sales_Comp_Category__c.field-meta.xml
<CustomField>
    <fullName>Sales_Comp_Category__c</fullName>
    <label>Sales Comp Category</label>
    <length>255</length>
    <type>Text</type>
</CustomField>