force-app/main/default/objects/X0_RCDM_Dates__mdt/fields/Special_Price__c.field-meta.xml
<CustomField>
    <fullName>Special_Price__c</fullName>
    <label>Special Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>