force-app/main/default/objects/X0_RCDM_Dates__mdt/fields/StartDate_Month__c.field-meta.xml
<CustomField>
    <fullName>StartDate_Month__c</fullName>
    <label>StartDate-Month</label>
    <length>10</length>
    <required>true</required>
    <type>Text</type>
</CustomField>