force-app/main/default/objects/X0_RCDM_Dates__mdt/fields/StartDate_Year__c.field-meta.xml
<CustomField>
    <fullName>StartDate_Year__c</fullName>
    <label>StartDate-Year</label>
    <length>10</length>
    <required>true</required>
    <type>Text</type>
</CustomField>