force-app/main/default/objects/X0_RCDM_Dates__mdt/fields/Subscription_Pricing__c.field-meta.xml
<CustomField>
    <fullName>Subscription_Pricing__c</fullName>
    <label>Subscription Pricing</label>
    <length>50</length>
    <type>Text</type>
</CustomField>