force-app/main/default/objects/X0_RCDM_Dates__mdt/fields/Subscription_Type__c.field-meta.xml
<CustomField>
    <fullName>Subscription_Type__c</fullName>
    <label>Subscription Type</label>
    <length>50</length>
    <type>Text</type>
</CustomField>